syntax = "proto3";

package pinax.ethereum.blobs.v1;

option go_package = "github.com/pinax-network/blobs-service/pb/pinax/ethereum/blobs/v1;pbbl";

import "google/protobuf/timestamp.proto";

enum Spec {
  UNSPECIFIED = 0;
  PHASE0 = 1;
  ALTAIR = 2;
  BELLATRIX = 3;
  CAPELLA = 4;
  DENEB = 5;
  ELECTRA = 6;
}

message Slot {
  uint64 slot = 1;
  Spec spec = 2;
  bytes root = 3;
  uint64 proposer_index = 4;
  bytes parent_root = 5;
  bytes state_root = 6;
  bytes body_root = 7;
  bytes signature = 8;
  google.protobuf.Timestamp timestamp = 10;

  repeated Blob blobs = 20;
}

message Blob {
  uint32 index = 1;
  bytes blob = 2;
  bytes kzg_commitment = 3;
  bytes kzg_proof = 4;
  repeated bytes kzg_commitment_inclusion_proof = 6;
}
